Part way done commenting... up to about where calculation #1 starts.

--- a/Condensation.ipynb
+++ b/Condensation.ipynb
@@ -10,7 +10,15 @@
     "\n",
     "August 10/20\n",
     "\n",
-    "Calculates the performance of a straight, multi-finned HEX  at the saturation point of liquid deuterium."
+    "Calculates the performance of a straight, multi-finned HEX  at the saturation point of liquid deuterium.\n",
+    "\n",
+    "This simply calculates the rate of condensate mass production rate on vertically oriented fins, following closely the example in Barron, Cryogenic Heat Transfer, 2nd ed.  The vapour is assumed to be in saturated conditions at $T_{sat}$.  The wall is assumed to be at some temperature $T_w<T_{sat}$.  Subcooling of the condensate is taken into account following Barron's example, using an effective latent heat of vaporization.\n",
+    "\n",
+    "To get a feeling for the range of possible conditions, we considered two models for the saturated condition at which the condensate would start to form:\n",
+    "1. In the first model, we assume the tank and thermosyphon begin in pressure equilibrium at 150 psia, and that they remain in pressure equilibrium at the start of condensation.  The colder thermosyphon is at saturation pressure, and the tank is at the same pressure, somewhat below 150 psia.  We then calculate the mass rate of production of condensate at this pressure.\n",
+    "2. In the second model, we assume that a regulator on the tank supplies a constant pressure to the thermosyphon of 16 psia.  We then assume condensation will occur at the saturated pressure of 16 psia and calculate the mass rate of production of condensate at that pressure.\n",
+    "\n",
+    "As shall be seen, the second model gives a somewhat lower production rate for the condensate.\n"
    ]
   },
   {
@@ -130,17 +138,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This system is a large tank containing deuterium gas connected to the thermosyphon loop where liquid deterium will be flowing. Mass will have to be conserved throughout the system, then\n",
+    "This system is a large tank containing deuterium gas connected to the thermosyphon loop where liquid deuterium will be flowing. \n",
     "\n",
+    "The volume of the large tank was not given.  But we know that when the tank and thermosyphon are connected and at room temperature, the pressure in the system is 150 psia.  We also know that when the thermosyphon is filled with cold liquid which is approximately in saturated conditions, the pressure in the system is 16 psia.  We can use this information to find the tank volume and the total mass of deuterium.\n",
+    "\n",
+    "Mass is conserved in both states of the system and therefore we may write\n",
     "\\begin{equation}\n",
-    "m = \\rho(T_{293},P_{150psia})(V_{tank}+V_{loop}) = \\rho(T_{20},P_{16psia})V_{loop} + \\rho(T_{293},P_{16psia})V_{tank}\n",
+    "m = \\rho(T_{293},P_{150psia})(V_{tank}+V_{loop}) = \\rho(T_{20},P_{16psia})V_{loop} + \\rho(T_{293},P_{16psia})V_{tank}.\n",
     "\\end{equation}\n",
     "\n",
-    "To find the volume of the large tank, \n",
-    "\n",
+    "This equation can be solved for the volume of the large tank\n",
     "\\begin{equation}\n",
-    "V_{tank} = \\frac{V_{loop}(\\rho(T_{20},P_{16psia})-\\rho(T_{293},P_{150psia}))}{\\rho(T_{293},P_{150psia})-\\rho(T_{293},P_{16psia})}\n",
-    "\\end{equation}"
+    "V_{tank} = \\frac{V_{loop}(\\rho(T_{20},P_{16psia})-\\rho(T_{293},P_{150psia}))}{\\rho(T_{293},P_{150psia})-\\rho(T_{293},P_{16psia})}.\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "[Kiera, there is a problem with the next lines.  total_mass is calculated from Vtank, but Vtank is later updated -- this should give an error.  We need total_mass to be correct in order for some calculations further below to be correct.]"
    ]
   },
   {
@@ -174,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The saturation curve for liquid deuterium is plotted below, from about 14 PSIA to about 200 PSIA. "
+    "To set a scale for temperatures and pressures, the saturation curve for liquid deuterium is plotted below, from about 14 PSIA to about 200 PSIA. "
    ]
   },
   {
@@ -221,12 +234,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At the point of saturation, the pressures between the loop and tank will be in equilibrium. Then, to solve for the pressure at saturated conditions, the equilibrium pressure was found. \n",
+    "Calculation #1\n",
     "\n",
+    "We assume the tank and thermosyphon begin in pressure equilibrium at 150 psia, and that they remain in pressure equilibrium at the start of condensation. The colder thermosyphon is at saturation pressure, and the tank is at the same pressure, somewhat below 150 psia. We then calculate the mass rate of production of condensate at this pressure.\n",
+    "\n",
+    "First we need to calculate the pressure at which condensation will begin to occur.\n",
+    "\n",
+    "At the point of saturation, the pressures between the loop and tank will be in equilibrium. We need to solve for this pressure by solving the following equation.\n",
     "\\begin{equation}\n",
-    "P_{sat}(T_{cold}) = P\\bigg(T_{tank},\\rho_{tank}=\\frac{m-\\rho_{sat}(T_{cold})V_{loop}}{V_{tank}}\\bigg)\n",
+    "P_{sat} = P\\bigg(T_{tank},\\rho_{tank}=\\frac{m-\\rho_{sat}(P_{sat})V_{loop}}{V_{tank}}\\bigg)\n",
     "\\end{equation}\n",
-    "\n"
+    "\n",
+    "Unfortunately, both sides of the equation have $P_{sat}$ in them.  So we solve by looping over $P_{sat}$ until LHS=RHS."
    ]
   },
   {
@@ -263,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The saturated pressure is then 933308 Pa, or 135.4 PSIA. Vapour will start to condense at 34 K at that pressure. Using the saturation pressure found, the enthalpy of vapourization and enthalpy of the liquid was found using CoolProp. To calculate the heat transfer coefficient of the condensate, the Reynolds number and Nusselt number must be found from the condensate correlation numbers. Following Example 7.11 from Barron, the latent heat of vapourization, $i_{fg}$, found from the difference between the vapour and liquid enthalpies is:\n",
+    "The saturated pressure is then 933308 Pa, or 135.4 PSIA. Vapour will start to condense at 34 K at that pressure. Using the saturation pressure found, the enthalpy of the vapour and the enthalpy of the liquid were found using CoolProp. To calculate the heat transfer coefficient of the condensate, the Reynolds number and Nusselt number must be found from the condensate correlation numbers. Following Example 7.11 from Barron, the latent heat of vapourization, $i_{fg}$, found from the difference between the vapour and liquid enthalpies is:\n",
     "\n",
     "\\begin{equation}\n",
     "i_{fg} = H_V- H_L\n",
@@ -770,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
