--- a/Condensation.ipynb
+++ b/Condensation.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,6 @@
    "source": [
     "Plow=16*6894.76 # Pa\n",
     "Phigh=150*6894.76 # Pa\n",
-    "total_mass=rho_293*(Vtank+Vts) # kg, total mass of deuterium\n",
     "rho_cold=PropsSI('D','T',20,'P',(16*6894.76),fluid) #kg/m^3, density of LD2 when it is at 20 K and 16 PSIA\n",
     "rho_cold293=PropsSI('D','T',293,'P',(16*6894.76),fluid) #kg/m^3, density of LD2 when it is at 293 K (coming from the large tank back into the loop - about to condense) at 16 PSIA\n",
     "#print(rho_cold)\n",
@@ -180,7 +179,8 @@
     "#print(rho_293)\n",
     "Vts=0.102318 #m^3, volume of the thermosyphon loop\n",
     "Vtank = (Vts*(rho_cold-rho_293))*(1/(rho_293-rho_cold293)) #m^3, volume of the large tank of gas\n",
-    "print('The Volume of the large tank is %f m^3.' %Vtank)"
+    "print('The Volume of the large tank is %f m^3.' %Vtank)\n",
+    "total_mass=rho_293*(Vtank+Vts) # kg, total mass of deuterium"
    ]
   },
   {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -291,9 +291,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The temperature at saturated pressure, 135.360173 PSIA, is 34.313212 K\n"
+     ]
+    }
+   ],
    "source": [
     "Tsat=CP.PropsSI('T','P',p,'Q',1,fluid) #from cool prop\n",
     "print()\n",
@@ -339,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,9 +384,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Reynolds number is 1256.266219\n"
+     ]
+    }
+   ],
    "source": [
     "Nu=0.9428*(Ra/Ja)**(1/4) #Eq'n 7.89 Barron\n",
     "\n",
@@ -409,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,9 +447,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Reynolds number is 1672.005996\n"
+     ]
+    }
+   ],
    "source": [
     "Re2 = (4*Nu2*Ja)/Pr #Eq'n 7.93 in Barron\n",
     "\n",
@@ -452,9 +477,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "heat coeff is 1075.041568 W/m2K\n"
+     ]
+    }
+   ],
    "source": [
     "hc = Nu2*kt/L #Eq'n 7.96 Barron\n",
     "\n",
@@ -474,9 +507,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "convection rate 3998.447146 W\n"
+     ]
+    }
+   ],
    "source": [
     "Qdot = hc*Aw*(Tsat-Tw) #Eq'n 6.43 Barron\n",
     "print('convection rate %f W' %Qdot)"
@@ -495,9 +536,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mass flux is 0.014761 kg/s\n"
+     ]
+    }
+   ],
    "source": [
     "mdot = Qdot/ifge #Eq'n 7.78 Barron\n",
     "print('mass flux is %f kg/s'%mdot)"
@@ -518,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,9 +693,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "452.26182826081345\n"
+     ]
+    }
+   ],
    "source": [
     "Re16 = (4*Nu16*Ja16)/Pr #Eq'n 7.93 Barron\n",
     "print(Re16)"
@@ -665,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,9 +750,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Re2 is 548.163535\n"
+     ]
+    }
+   ],
    "source": [
     "Nu216 = ((Pr) / (4*Ja16))*(((Gr16**(1/3)*Ja16) / (0.27*Pr)) + 4.815)**(1/1.22)\n",
     "Re216 = (4*Nu216*Ja16)/Pr\n",
@@ -715,9 +780,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "heat coeff is 1460.380909 W/m2K\n"
+     ]
+    }
+   ],
    "source": [
     "hc16 = Nu216*kt/L #Eq'n 7.96 Barron\n",
     "print('heat coeff is %f W/m2K' %hc16)"
@@ -736,9 +809,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The convection rate 1556.473970 W\n"
+     ]
+    }
+   ],
    "source": [
     "Qdot16 = hc16*Aw*(Tsat16-Tw) #Eq'n 6.43 Barron\n",
     "print('The convection rate %f W' %Qdot16)"
@@ -757,9 +838,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mass flux is 0.004839 kg/s\n"
+     ]
+    }
+   ],
    "source": [
     "mdot16 = Qdot16/ifge16 #Eq'n 7.78 Barron\n",
     "print('The mass flux is %f kg/s'%mdot16 )"
@@ -789,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
