--- a/Proper-Helix.ipynb
+++ b/Proper-Helix.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the Dean number is greater than 300, and the Reynolds number is greater than 3500, the flow is turbulent. The friction factor is found from Equation 4.30 in Sadik,\n",
+    "Since the Dean number is greater than 300, and the Reynolds number is greater than 3500, the flow is turbulent. Sadik cites two different friction factors that can apply to our HEX. The first friction factor is from Ito, found from Equation 4.30,\n",
     "\n",
     "\\begin{equation}\n",
     "f = 4fc\\bigg(0.00725 + 0.076\\bigg(Re\\bigg(\\frac{D}{D_h}\\bigg)^{-2}\\bigg)^{-0.25}\\bigg)\\left(\\frac{D_h}{D}\\right)^{1/2}\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -253,16 +253,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The friction factor is found from Equation 4.31 in Sadik,\n",
+    "The second cited friction factor is from Srinivasan et al., found from Equation 4.31 in Sadik, \n",
     "\n",
     "\\begin{equation}\n",
     "f_2 = 4fc_2\\bigg(0.084\\bigg(Re\\bigg(\\frac{D}{D_h}\\bigg)^{-2}\\bigg)^{-0.2}\\bigg)\\left(\\frac{D_h}{D}\\right)^{1/2}\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "Note, both of these friction factors were Fanning friction factors. In all other calculations, we were finding the Darcy friction factors. Darcy friction factors are four times Fanning friction factors. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
