--- a/Condensation.ipynb
+++ b/Condensation.ipynb
@@ -320,37 +320,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The \"effective\" heat of vapourization takes into account, approximately, the subcooling in the condsate layer. From Equation 7.79 in Barron, \n",
-    "\n",
+    "The ``effective'' heat of vapourization takes into account, approximately, the subcooling in the condensate layer. Equation (7.79) in Barron gives\n",
     "\\begin{equation}\n",
     "i_{fg,e} = i_{fg} + 0.68C_p(T_{sat}-T_w)\n",
     "\\end{equation}\n",
+    "where $C_p$ is the heat capacity of the liquid.\n",
     "\n",
     "\n",
-    "The Prandtl number from Equation 6.14 of Barron,\n",
-    "\n",
+    "The Prandtl number from Equation 6.14 of Barron\n",
     "\\begin{equation}\n",
-    "Pr = \\frac{\\mu C_p}{kt}\n",
+    "Pr=\\frac{\\mu C_p}{k_t}\n",
     "\\end{equation}\n",
+    "refers entirely to the liquid properties.\n",
     "\n",
     "The Jakob number from Equation 7.84 of Barron is\n",
-    "\n",
     "\\begin{equation}\n",
-    "Ja = \\frac{C_p(T_{sat}-T_w}{ifg_e}\n",
+    "Ja = \\frac{C_p(T_{sat}-T_w)}{i_{fg,e}}\n",
     "\\end{equation}\n",
+    "where $C_p$ refers to the heat capacity of the liquid.\n",
     "\n",
-    "The \"condensation\" Rayleigh number is defind by Equation 7.83 in Barron,\n",
-    "\n",
+    "The \"condensation\" Rayleigh number is defind by Equation 7.83 in Barron as\n",
     "\\begin{equation}\n",
-    "Ra = \\frac{g\\rho(\\rho-\\rho_v)L^3Pr}{\\mu^2}\n",
-    "\\end{equation}"
+    "Ra=\\frac{g\\rho(\\rho-\\rho_v)L^3Pr}{\\mu^2}\n",
+    "\\end{equation}\n",
+    "where $\\rho$ is the density of the liquid and $\\mu$ is the viscosity of the liquid.  The dimension $L$ is the length of the tube/fin, in this case taken to be the length of the HEX.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ifg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-f6c63bbe22a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mifge\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mifg\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m0.68\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mcp\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTsat\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mTw\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Eq'n 7.79 Barron\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mPr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmu\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mcp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkt\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Eq'n 6.14 Barron\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#jakob number\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ifg' is not defined"
+     ]
+    }
+   ],
    "source": [
     "ifge= ifg + 0.68*cp*(Tsat-Tw) #Eq'n 7.79 Barron\n",
     "\n",
@@ -362,24 +374,27 @@
     "\n",
     "#Rayleigh number\n",
     "\n",
-    "Ra = (g*rho*(rho-rho_v)*L**3*Pr)/(mu**2) #Eq'n 7.83 Barron\n"
+    "Ra = (g*rho*(rho-rho_v)*L**3*Pr)/(mu**2) #Eq'n 7.83 Barron\n",
+    "\n",
+    "#unit check \n",
+    "#(m/s^2)*(kg^2/m^6)*m^3/(Pa*s)^2=kg^2/(m^2*s^2)/(kg*m/s^2/m^2*s)^2=kg^2/(m^2*s^2)/(kg/(m*s))^2=1\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assuming the condensate flow is laminar, the Nusselt number can be found from Equation 7.89 in Barron,\n",
-    "\n",
+    "We begin by assuming the condensate flow is laminar; this assumption will be checked later.  The laminar correlation for the Nusselt number can be found from Equation 7.89 in Barron\n",
     "\\begin{equation}\n",
     "Nu = 0.9428\\bigg(\\frac{Ra}{Ja}\\bigg)^{1/4}\n",
     "\\end{equation}\n",
     "\n",
-    "The Reynold number of the condensate film from Equaton 7.93 in Barron is\n",
-    "\n",
+    "The Reynolds number of the condensate film from Equaton 7.93 in Barron is\n",
     "\\begin{equation}\n",
     "Re = \\frac{4NuJa}{Pr}\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "This gives a laminar estimate of the Reynolds number."
    ]
   },
   {
@@ -409,19 +424,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The condensate Grashof number from Equation 7.95 is\n",
+    "The Reynolds number is 1256 which is greater than the transition value of 30.  This indicates that the flow is in the laminar-wavy range ($30<Re<1800$). So, we must re-evaluate using correlations appropriate to the laminar-wavy region, the Nusselt number then being given by Equation (7.96).\n",
     "\n",
+    "The condensation Grashof number from Equation (7.95) is\n",
     "\\begin{equation}\n",
     "Gr = \\frac{g\\rho(\\rho-\\rho_v)L^3}{\\mu^2}\n",
     "\\end{equation}\n",
     "\n",
-    "As the Reynolds number is 1256, that indicates that the flow is in the laminar-wavy range (30 < Re < 1800). Then, the average Nusselt number for this region can be written as\n",
-    "\n",
+    "The average Nusselt number for the laminar-wavy region can then be written as\n",
     "\\begin{equation}\n",
-    "Nu = \\bigg(\\frac{Pr}{4Ja}\\bigg) \\bigg(\\frac{Gr^{1/3}Ja}{(0.27Pr +4.815)^{1/1.22}}\\bigg)\n",
+    "Nu = \\bigg(\\frac{Pr}{4Ja}\\bigg) \\bigg(\\frac{Gr^{1/3}Ja}{0.27Pr}+4.815\\bigg)^{1/1.22}\n",
     "\\end{equation}\n",
-    "\n",
-    "from Equation 7.96 in Barron."
+    "using Equation 7.96 in Barron."
    ]
   },
   {
@@ -431,17 +445,16 @@
    "outputs": [],
    "source": [
     "Gr = (g*rho*(rho-rho_v)*L**3)/(mu**2) #Eq'n 7.95 Barron\n",
-    "Nu2 = ((Pr) / (4*Ja))*(((Gr**(1/3)*Ja) / (0.27*Pr)) + 4.815)**(1/1.22) #Eq'n 7.96 Barron"
+    "Nu2 = (Pr/(4*Ja))*(((Gr**(1/3)*Ja)/(0.27*Pr))+4.815)**(1/1.22) #Eq'n 7.96 Barron"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Reynolds number can be found again using the average Nusselt number found above. From Equaton 7.93 in Barron again,\n",
-    "\n",
+    "We should recheck that the Reynolds number is also still in the correct laminar-wavy range.  The Reynolds number can be found again using the average Nusselt number found above. From Equaton 7.93 in Barron again\n",
     "\\begin{equation}\n",
-    "Re = \\frac{4NuJa}{Pr}\n",
+    "Re = \\frac{4NuJa}{Pr}.\n",
     "\\end{equation}"
    ]
   },
@@ -468,11 +481,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Reynolds number is still in the laminar-wavy range. The heat transfer coefficient from Equation 7.96 in Barron is\n",
+    "The Reynolds number is still in the laminar-wavy range, as required ($30<Re<1800$).\n",
     "\n",
+    "The heat transfer coefficient from Equation 7.96 in Barron is\n",
     "\\begin{equation}\n",
-    "hc = \\frac{Nukt}{L}\n",
-    "\\end{equation}"
+    "h_c = \\frac{Nuk_t}{L}\n",
+    "\\end{equation}\n",
+    "where $L$ is the length of the vertical tube/fin."
    ]
   },
   {
@@ -501,8 +516,9 @@
     "The convection rate from Equation 6.43 in Barron is\n",
     "\n",
     "\\begin{equation}\n",
-    "\\dot{Q} = hcA_w(T_{sat}-T_w)\n",
-    "\\end{equation}"
+    "\\dot{Q} = h_cA_w(T_{sat}-T_w)\n",
+    "\\end{equation}\n",
+    "where $A_w$ is the area of the cold wall in the HEX."
    ]
   },
   {
@@ -527,10 +543,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, the mass flux from Equation 7.78 in Barron is\n",
-    "\n",
+    "Finally, the liquid mass flow rate from Equation 7.78 in Barron is\n",
     "\\begin{equation}\n",
-    "\\dot{m} = \\frac{\\dot{Q}}{ifg_e}\n",
+    "\\dot{m} = \\frac{\\dot{Q}}{i_{fg,e}}.\n",
     "\\end{equation}"
    ]
   },
@@ -556,12 +571,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When the system is cold and full of deuterium, the saturated conditions will be at 16 PSIA. Then, the large tank will also have a pressure of 16 psia of deuterium at room temperature. The system could be regulated to stay at 16 PSIA. The previous calculations were carried out taking the saturation pressure to be 16 PSIA instead of about 135 PSIA.  \n",
     "\n",
-    "Using 16 PSIA, the enthalpies were found using CoolProp. Then, the latent heat of vapourization, $i_{fg}$, found from the difference between the vapour and liquid enthalpies is:\n",
+    "Calculation #2\n",
     "\n",
+    "We assume that a regulator on the tank supplies a constant pressure to the thermosyphon of 16 psia.  We thereby assume condensation will occur at the saturated pressure of 16 psia and calculate the mass rate of production of condensate at that pressure.\n",
+    "\n",
+    "We otherwise follow the same calculation as above.\n",
+    "\n",
+    "Using 16 psia, the enthalpies were found using CoolProp. Then, the latent heat of vapourization, $i_{fg}$, found from the difference between the vapour and liquid enthalpies is\n",
     "\\begin{equation}\n",
-    "i_{fg} = H_V- H_L\n",
+    "i_{fg}=H_V-H_L.\n",
     "\\end{equation}"
    ]
   },
@@ -587,8 +606,9 @@
     "The \"effective\" heat of vapourization takes into account, approximately, the subcooling in the condsate layer. From Equation 7.79 in Barron, \n",
     "\n",
     "\\begin{equation}\n",
-    "i_{fg,e} = i_{fg} + 0.68C_p(T_{sat}-T_w)\n",
-    "\\end{equation}\n"
+    "i_{fg,e}=i_{fg}+0.68C_p(T_{sat}-T_w)\n",
+    "\\end{equation}\n",
+    "where $C_p$ refers to the liquid property."
    ]
   },
   {
@@ -604,8 +624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Prandtl number from Equation 6.14 of Barron,\n",
-    "\n",
+    "The liquid Prandtl number may be found from Equation 6.14 of Barron\n",
     "\\begin{equation}\n",
     "Pr = \\frac{\\mu C_p}{kt}\n",
     "\\end{equation}"
@@ -627,8 +646,9 @@
     "The Jakob number from Equation 7.84 of Barron is\n",
     "\n",
     "\\begin{equation}\n",
-    "Ja = \\frac{C_p(T_{sat}-T_w}{ifg_e}\n",
-    "\\end{equation}"
+    "Ja = \\frac{C_p(T_{sat}-T_w)}{i_{fg,e}}\n",
+    "\\end{equation}\n",
+    "where $C_p$ again refers to the liquid property."
    ]
   },
   {
@@ -644,11 +664,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The \"condensation\" Rayleigh number is defind by Equation 7.83 in Barron,\n",
-    "\n",
+    "The \"condensation\" Rayleigh number is defind by Equation 7.83 in Barron\n",
     "\\begin{equation}\n",
     "Ra = \\frac{g\\rho(\\rho-\\rho_v)L^3Pr}{\\mu^2}\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "where $\\rho$ and $\\mu$ are also evaluated for the liquid."
    ]
   },
   {
@@ -684,8 +704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Reynold number of the condensate film from Equaton 7.93 in Barron is\n",
-    "\n",
+    "The Reynolds number of the condensate film from Equaton 7.93 in Barron is\n",
     "\\begin{equation}\n",
     "Re = \\frac{4NuJa}{Pr}\n",
     "\\end{equation}"
@@ -713,8 +732,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The condensate Grashof number from Equation 7.95 is\n",
+    "As the Reynolds number is 452, that indicates that the flow is in the laminar-wavy range (30 < Re < 1800).  Thus the Nusselt number needs to be re-evaluated for this region.\n",
     "\n",
+    "The condensate Grashof number from Equation 7.95 is\n",
     "\\begin{equation}\n",
     "Gr = \\frac{g\\rho(\\rho-\\rho_v)L^3}{\\mu^2}\n",
     "\\end{equation}"
@@ -733,18 +753,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the Reynolds number is 1256, that indicates that the flow is in the laminar-wavy range (30 < Re < 1800). Then, the average Nusselt number for this region can be written as\n",
-    "\n",
+    "Then, the average Nusselt number for the wavy-laminar region can be written as\n",
     "\\begin{equation}\n",
-    "Nu = \\bigg(\\frac{Pr}{4Ja}\\bigg) \\bigg(\\frac{Gr^{1/3}Ja}{(0.27Pr +4.815)^{1/1.22}}\\bigg)\n",
+    "Nu = \\bigg(\\frac{Pr}{4Ja}\\bigg) \\bigg(\\frac{Gr^{1/3}Ja}{0.27Pr} +4.815\\bigg)^{1/1.22}\n",
     "\\end{equation}\n",
     "\n",
     "from Equation 7.96 in Barron.\n",
     "\n",
-    "The Reynold number of the condensate film from Equaton 7.93 in Barron is\n",
-    "\n",
+    "The Reynold number of the condensate film may then be re-evaluated from Equaton 7.93 in Barron as\n",
     "\\begin{equation}\n",
-    "Re = \\frac{4NuJa}{Pr}\n",
+    "Re = \\frac{4NuJa}{Pr}.\n",
     "\\end{equation}"
    ]
   },
@@ -771,23 +789,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Reynolds number is still in the laminar-wavy range. The heat transfer coefficient from Equation 7.96 in Barron is\n",
+    "The Reynolds number is still in the laminar-wavy range.\n",
     "\n",
+    "\n",
+    "The heat transfer coefficient from Equation 7.96 in Barron is\n",
     "\\begin{equation}\n",
-    "hc = \\frac{Nukt}{L}\n",
+    "h_c = \\frac{Nuk_t}{L}\n",
     "\\end{equation}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "heat coeff is 1460.380909 W/m2K\n"
+     "ename": "NameError",
+     "evalue": "name 'Nu216' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-51b436f3f127>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhc16\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNu216\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mkt\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mL\u001b[0m \u001b[0;31m#Eq'n 7.96 Barron\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'heat coeff is %f W/m2K'\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0mhc16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Nu216' is not defined"
      ]
     }
    ],
@@ -803,20 +827,24 @@
     "The convection rate from Equation 6.43 in Barron is\n",
     "\n",
     "\\begin{equation}\n",
-    "\\dot{Q} = hcA_w(T_{sat}-T_w)\n",
+    "\\dot{Q} = h_cA_w(T_{sat}-T_w)\n",
     "\\end{equation}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The convection rate 1556.473970 W\n"
+     "ename": "NameError",
+     "evalue": "name 'hc16' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-7fcde7f8f40f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mQdot16\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhc16\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mAw\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTsat16\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mTw\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Eq'n 6.43 Barron\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The convection rate %f W'\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0mQdot16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hc16' is not defined"
      ]
     }
    ],
@@ -829,10 +857,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, the mass flux from Equation 7.78 in Barron is\n",
-    "\n",
+    "Finally, the liquid mass flow rate from Equation 7.78 in Barron is\n",
     "\\begin{equation}\n",
-    "\\dot{m} = \\frac{\\dot{Q}}{ifg_e}\n",
+    "\\dot{m} = \\frac{\\dot{Q}}{ifg_e}.\n",
     "\\end{equation}"
    ]
   },
@@ -852,6 +879,58 @@
    "source": [
     "mdot16 = Qdot16/ifge16 #Eq'n 7.78 Barron\n",
     "print('The mass flux is %f kg/s'%mdot16 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The tube size becomes important when the film thickness begins to compete with the tube dimension.  This occurs when\n",
+    "\\begin{equation}\n",
+    "L/D>(L/D)_{crit}=(blah)\n",
+    "\\end{equation}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "LoD_crit=0.\n",
+    "print(LoD_crit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The length of the HEX is 10 inches.\n",
+    "\n",
+    "Two possibilities exist for $D$.  One is to use the hydraulic diameter of the rectangular channels $D=...$.  This give a value L/D=... which exceed the critical value substantially.\n",
+    "\n",
+    "Another possibility is to view the film as condensing on the exterior of the entire cold cylinder.  In this case $D=4.75$ inches and L/D=... which is below the critical value substantially.\n",
+    "\n",
+    "It is unclear to us which possibility is more correct."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also worked out the film thickness at the bottom of the HEX using Eq. (7.85) of Barron\n",
+    "\\begin{equation}\n",
+    "7.85\n",
+    "\\end{equation}\n",
+    "which gives $\\delta=...$ at the bottom of the HEX.  This is big/small/whatever."
    ]
   },
   {
@@ -878,7 +957,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
