--- a/Helix-as-tube-v2-N=2.ipynb
+++ b/Helix-as-tube-v2-N=2.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +55,10 @@
     "#Geometry of HEX\n",
     "#############################################################\n",
     "L=10*0.0254 #m physical height of tube, from CM.LD2.015.R2\n",
-    "Ngrooves=2 # number of grooves, the optimal groove will be explored in another notebook \n",
+    "Ngrooves=150 # number of grooves, the optimal groove will be explored in another notebook \n",
     "D=4.76*0.0254 #m diameter of tube from CM.LD2.015.R2\n",
-    "wprime= 0.01 #m width of groove\n",
-    "uprime= 0.01 # m width between grooves\n",
+    "wprime= 0.001 #m width of groove\n",
+    "uprime= 0.001 # m width between grooves\n",
     "depth=0.01 # m depth of groove"
    ]
   },
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The pitch angle is 0.105506 radians\n"
+      "The pitch angle is 0.910523 radians\n"
      ]
     }
    ],
@@ -100,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The length of the groove is 2.411928 m.\n",
-      "Coiling around a Cu rod of diameter 0.120904 m would require approximately 6.350000 turns\n",
-      "Coiling around a Cu rod of diameter 0.120904 m would require 6.314690 turns\n"
+      "The length of the groove is 0.321590 m.\n",
+      "Coiling around a Cu rod of diameter 0.120904 m would require approximately 0.846667 turns\n",
+      "Coiling around a Cu rod of diameter 0.120904 m would require 0.519288 turns\n"
      ]
     }
    ],
@@ -141,15 +141,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The area of the helical fins is 0.000200 m^2.\n",
-      "The perimeter of the helical grooves is 0.080000 m.\n"
+      "The area of the helical fins is 0.001500 m^2.\n",
+      "The perimeter of the helical grooves is 3.300000 m.\n"
      ]
     }
    ],
@@ -183,15 +183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hydraulic diameter 0.010000 m\n",
-      "Mass flux per unit area is 20.000000 kg/(m^2*s)\n"
+      "Hydraulic diameter 0.001818 m\n",
+      "Mass flux per unit area is 2.666667 kg/(m^2*s)\n"
      ]
     }
    ],
@@ -215,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Reynolds number is 5714.285714\n"
+      "The Reynolds number is 138.528139\n"
      ]
     }
    ],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
      "output_type": "stream",
      "text": [
       "This is B1 1.174891.\n",
-      "The Colburn factor for the turbulent flow is 0.004790.\n"
+      "It is laminar or in between\n"
      ]
     }
    ],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
      "output_type": "stream",
      "text": [
       "The Prandtl Number is 2.209510.\n",
-      "This is the turbulent Nusselt Number 35.650066.\n"
+      "Nu=4.8608 because the flow is laminar\n"
      ]
     }
    ],
@@ -336,14 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The heat transfer coefficient for turbulent flow is 370.760687 W/(m^2*K)\n"
+      "The heat transfer coefficient for laminar flow is 278.037760 W/(m^2*K)\n"
      ]
     }
    ],
@@ -369,14 +369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The turbulent friction factor is 0.036345.\n"
+      "The laminar friction factor is 0.693000.\n"
      ]
     }
    ],
@@ -407,14 +407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The pressure drop is 10.756061 Pa\n"
+      "The pressure drop is 2.673738 Pa\n"
      ]
     }
    ],
@@ -439,14 +439,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Area of cold wall 0.144716 m^2\n"
+      "Area of cold wall 1.013010 m^2\n"
      ]
     }
    ],
@@ -467,14 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of transfer units is 2.043092\n",
+      "The number of transfer units is 10.724972\n",
       "\n"
      ]
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -511,8 +511,8 @@
      "output_type": "stream",
      "text": [
       "For inlet temperature 23.400000 K and wall temperature 20.700000 K\n",
-      "the outlet temperature is 21.049994 K\n",
-      "and the total heat transfer rate is 61.714930 W\n",
+      "the outlet temperature is 20.700059 K\n",
+      "and the total heat transfer rate is 70.904761 W\n",
       "\n"
      ]
     }
