Added L/D crit and thickness of condensation

--- a/Condensation.ipynb
+++ b/Condensation.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -150,15 +150,12 @@
     "This equation can be solved for the volume of the large tank\n",
     "\\begin{equation}\n",
     "V_{tank} = \\frac{V_{loop}(\\rho(T_{20},P_{16psia})-\\rho(T_{293},P_{150psia}))}{\\rho(T_{293},P_{150psia})-\\rho(T_{293},P_{16psia})}.\n",
-    "\\end{equation}\n",
-    "\n",
-    "\n",
-    "[Kiera, there is a problem with the next lines.  total_mass is calculated from Vtank, but Vtank is later updated -- this should give an error.  We need total_mass to be correct in order for some calculations further below to be correct.]"
+    "\\end{equation}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -348,21 +345,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ifg' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-f6c63bbe22a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mifge\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mifg\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m0.68\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mcp\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTsat\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mTw\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Eq'n 7.79 Barron\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mPr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmu\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mcp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkt\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Eq'n 6.14 Barron\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#jakob number\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ifg' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ifge= ifg + 0.68*cp*(Tsat-Tw) #Eq'n 7.79 Barron\n",
     "\n",
@@ -399,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -800,18 +785,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Nu216' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-51b436f3f127>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhc16\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNu216\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mkt\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mL\u001b[0m \u001b[0;31m#Eq'n 7.96 Barron\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'heat coeff is %f W/m2K'\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0mhc16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Nu216' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "heat coeff is 1460.380909 W/m2K\n"
      ]
     }
    ],
@@ -833,18 +814,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'hc16' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-7fcde7f8f40f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mQdot16\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhc16\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mAw\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTsat16\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mTw\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Eq'n 6.43 Barron\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The convection rate %f W'\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0mQdot16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'hc16' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The convection rate 1556.473970 W\n"
      ]
     }
    ],
@@ -865,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -887,25 +864,25 @@
    "source": [
     "The tube size becomes important when the film thickness begins to compete with the tube dimension.  This occurs when\n",
     "\\begin{equation}\n",
-    "L/D>(L/D)_{crit}=(blah)\n",
+    "L/D>(L/D)_{crit}=0.007\\bigg(\\frac{Ra}{Ja}\\bigg)^{1/4}\n",
     "\\end{equation}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n"
+      "14.646975389207357\n"
      ]
     }
    ],
    "source": [
-    "LoD_crit=0.\n",
+    "LoD_crit=0.007*(Ra/Ja)**(1/4)\n",
     "print(LoD_crit)"
    ]
   },
@@ -915,9 +892,9 @@
    "source": [
     "The length of the HEX is 10 inches.\n",
     "\n",
-    "Two possibilities exist for $D$.  One is to use the hydraulic diameter of the rectangular channels $D=...$.  This give a value L/D=... which exceed the critical value substantially.\n",
+    "Two possibilities exist for $D$.  One is to use the hydraulic diameter of the rectangular channels $D=0.00152$m.  This give a value L/D=166.77m which exceed the critical value substantially.\n",
     "\n",
-    "Another possibility is to view the film as condensing on the exterior of the entire cold cylinder.  In this case $D=4.75$ inches and L/D=... which is below the critical value substantially.\n",
+    "Another possibility is to view the film as condensing on the exterior of the entire cold cylinder.  In this case $D=4.75$ inches and L/D=2.10m which is below the critical value substantially.\n",
     "\n",
     "It is unclear to us which possibility is more correct."
    ]
@@ -928,9 +905,9 @@
    "source": [
     "We also worked out the film thickness at the bottom of the HEX using Eq. (7.85) of Barron\n",
     "\\begin{equation}\n",
-    "7.85\n",
+    "\\delta = \\sqrt{2}\\bigg(\\frac{Ja}{Ra}\\bigg)^{1/4}\\bigg(\\frac{x}{L}\\bigg)^{1/4}L\n",
     "\\end{equation}\n",
-    "which gives $\\delta=...$ at the bottom of the HEX.  This is big/small/whatever."
+    "which gives $\\delta=0.000169$m=0.0066 inches at the bottom of the HEX, where x=L for the first calculation and $\\delta=0.000115$m=0.0045 inches for the second calculation.  Both of these thicknesses are small compared to the hydraulic diameter and the diameter of the larger steel tube."
    ]
   },
   {
@@ -957,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
